# playground

./: Cargo.toml  README.md  benchmark.sh
.github/workflows/: codspeed.yml
benches/: fibonacci.rs
wcodspeed/: Cargo.toml
wcodspeed/src/: codspeed.rs  main.rs
